Move footer columns to avoid overlap with audio controls

--- a/css/toc-style.css
+++ b/css/toc-style.css
@@ -1,2 +1,7 @@
-/* Footer; reduce width to avoid overlap with navigation controls. */
+/* Reduce width of TOC progress footer.
+   Avoids overlap with navigation controls. */
 #toc-progress-footer { width: 90%; }
+
+/* Move footer columns to avoid overlap with audio controls. */
+#toc-progress-footer-main { width: 60%; }
+#toc-progress-footer-secondary { width: 40%; }
